Fix dashboard icon not responsive to font size

--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ img {
   height: 50%;
 }
 
+.sidebar-header img {
+  height: 2rem; 
+}
+
 /* HEADER =================================================================== */
 
 .header { 
